--- a/env/requirements.yaml
+++ b/env/requirements.yaml
@@ -16,6 +16,9 @@ dependencies:
 - name: inventory
   repository: http://jenkins-x-chartmuseum:8080
   version: 0.0.12
+- name: pricing
+  repository: http://jenkins-x-chartmuseum:8080
+  version: 0.0.2
 - name: user
   repository: http://jenkins-x-chartmuseum:8080
   version: 0.0.8
